--- a/frontend/image-noise-ui/package.json
+++ b/frontend/image-noise-ui/package.json
@@ -18,7 +18,8 @@
     "rand-seed": "^2.1.7",
     "simplex-noise": "^4.0.3",
     "uuid": "^11.1.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
